# media-shotdate-renamer

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
docs/: CRG.md  DTL.md  PRD.md
src/msr/: __init__.py  __main__.py  app.py
src/msr/core/: collision.py  copier.py  exiftool.py  file_processor.py  metadata.py  patterns.py  planner.py  summary.py
src/msr/ui/: gui.py
tests/: .gitkeep  test_collision.py  test_copier.py  test_exiftool.py  test_exiftool_batch.py  test_exiftool_retry.py  test_integration.py  test_metadata.py  test_patterns.py  test_planner.py  test_scanner.py  test_summary.py
tools/exiftool/: .gitkeep
